# practice

./: call-slackapi.py
slack-app-project/: pyproject.toml  say_hi.py
