[tool.poetry]
name = "slack-app-project"
version = "0.1.0"
description = ""
authors = ["MAO-business <mao.f.shukatu@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_app_project"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
